[package]
edition = "2021"
name = "intercode_reporting"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {workspace = true}
askama_axum = {workspace = true}
async-graphql = {workspace = true}
axum = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
http = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_inflector = {workspace = true}
intercode_policies = {workspace = true}
intercode_server = {workspace = true}
itertools = {workspace = true}
mailparse = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
