[package]
edition = "2021"
name = "intercode_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
axum-server = {workspace = true}
axum-sessions = {workspace = true}
base64 = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
csrf = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
http = {workspace = true}
hyper = {workspace = true}
i18n-embed = {workspace = true}
i18n-embed-fl = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_policies = {workspace = true}
once_cell = {workspace = true}
opentelemetry = {workspace = true}
regex = {workspace = true}
rust-embed = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde_json = {workspace = true}
time = {workspace = true}
tokio = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
tracing = {workspace = true}
