[package]
edition = "2021"
name = "intercode_signups"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
axum = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
http = {workspace = true}
ics = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_policies = {workspace = true}
intercode_query_builders = {workspace = true}
intercode_server = {workspace = true}
intercode_timespan = {workspace = true}
itertools = {workspace = true}
once_cell = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}
