[package]
edition = "2021"
name = "intercode_store"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
intercode_entities = {path = "../intercode_entities"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_graphql_loaders = {path = "../intercode_graphql_loaders"}
intercode_inflector = {path = "../intercode_inflector"}
intercode_liquid = {path = "../intercode_liquid"}
intercode_pagination_from_query_builder = {path = "../intercode_pagination_from_query_builder"}
intercode_policies = {path = "../intercode_policies"}
intercode_query_builders = {path = "../intercode_query_builders"}
rusty-money = {workspace = true}
sea-orm = {workspace = true}
seawater = {path = "../seawater"}
serde_json = {workspace = true}
