[package]
edition = "2021"
name = "intercode_store"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
intercode_cms = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_inflector = {workspace = true}
intercode_liquid = {workspace = true}
intercode_policies = {workspace = true}
intercode_query_builders = {workspace = true}
liquid = {workspace = true}
once_cell = {workspace = true}
rusty-money = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde_json = {workspace = true}
stripe = {workspace = true}
tracing = {workspace = true}
