[package]
edition = "2021"
name = "intercode_timespan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {workspace = true}
i18n-embed = {workspace = true}
i18n-embed-fl = {workspace = true}
serde = {workspace = true}
