[package]
edition = "2021"
name = "intercode_users"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
intercode_entities = {path = "../intercode_entities"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_graphql_loaders = {path = "../intercode_graphql_loaders"}
intercode_policies = {path = "../intercode_policies"}
md5 = {workspace = true}
pulldown-cmark = {workspace = true}
seawater = {path = "../seawater"}
