[package]
edition = "2021"
name = "lazy_liquid_value_view"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
lazy_liquid_value_view_derive = {path = "../lazy_liquid_value_view_derive"}
liquid = {git = "https://github.com/nbudin/liquid-rust.git", branch = "lax-nulls"}
liquid-core = {git = "https://github.com/nbudin/liquid-rust.git", branch = "lax-nulls"}
once_cell = "1.17.0"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = {version = "*", features = ["sync", "rt-multi-thread"]}
