[package]
edition = "2021"
name = "lazy_liquid_value_view"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace = true}
lazy_liquid_value_view_derive = {path = "../lazy_liquid_value_view_derive"}
liquid = {workspace = true}
liquid-core = {workspace = true}
once_cell = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["sync", "rt-multi-thread"]}
