[package]
edition = "2021"
name = "seawater"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "*", features = ["dataloader"]}
async-trait = "*"
# axum-sea-orm-tx = {version = "0.1.0", git = "https://github.com/nbudin/axum-sea-orm-tx.git"}
axum-sea-orm-tx = {path = "../../../axum-sea-orm-tx"}
futures = "*"
lazy_liquid_value_view = {path = "../lazy_liquid_value_view"}
liquid = {workspace = true}
liquid-core = {workspace = true}
once_cell = "*"
sea-orm = "*"
seawater_derive = {path = "../seawater_derive"}
tracing = "*"
