[package]
edition = "2021"
name = "seawater"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true, features = ["dataloader"]}
async-trait = {workspace = true}
lazy_liquid_value_view = {path = "../lazy_liquid_value_view"}
liquid = {workspace = true}
liquid-core = {workspace = true}
once_cell = {workspace = true}
regex = {workspace = true}
sea-orm = {workspace = true}
seawater_derive = {path = "../seawater_derive"}
tracing = {workspace = true}
